src/containers/Tenant/Diagnostics/TenantOverview/TenantOverview.scss
@use '../../../../styles/mixins.scss';

.tenant-overview {
    overflow: auto;

    height: 100%;
    padding-bottom: 20px;

    &__loader {
        display: flex;
        justify-content: center;
    }
    &__tenant-name-wrapper {
        display: flex;
        overflow: hidden;
        align-items: center;
    }

    &__top {
        display: flex;
        align-items: center;
        gap: 4px;

        margin-bottom: 10px;

        line-height: 24px;
    }

    &__top-label {
        gap: 10px;

        margin-bottom: var(--diagnostics-section-title-margin);

        font-weight: 600;
        line-height: 24px;
    }

    &__info {
        position: sticky;
        left: 0;

        width: max-content;
    }

    &__title {
        margin-bottom: 10px;

        font-weight: 700;

        @include mixins.body-2-typography();
    }

    &__table {
        &:not(:last-child) {
            margin-bottom: var(--diagnostics-section-margin);
        }
    }

    &__top-queries-row {
        cursor: pointer;
    }

    &__storage-info {
        margin-bottom: 36px;
    }

    &__memory-info {
        width: 300px;
        margin-bottom: 36px;
    }
}

